=== 1.0.0 / 2011-02-11

* 1 major enhancement

  * Birthday!
